--- a/src/translations/bd.json
+++ b/src/translations/bd.json
@@ -59,5 +59,6 @@
   "MadebyReact.jsandModuleCSS": "রিয়েক্ট জেএস এবং মডিউল সিএসএস দিয়ে তৈরি।",
   "MadebyNext.jsandTailwindCSS": "নেক্সট জেএস এবং টেইলউইন্ড সিএসএস দিয়ে তৈরি।",
   "MadebyNext.jsandModuleCSS": "নেক্সট জেএস এবং মডিউল সিএসএস দিয়ে তৈরি।",
+  "MadebyWebflow": "ওয়েবফ্লো দ্বারা তৈরি",
   "©2023.AllrightsreservedbySajibAhmed": "© ২০২৩. সমস্ত অধিকার সংরক্ষিত, সাজিব আহমেদ"
 }
