some features update

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -54,7 +54,10 @@
   "E-COMMERCEWEBSITE": "موقع الكتروني للتجارة الإلكترونية",
   "ADMINDASHBOARD": "لوحة التحكم الإدارية",
   "LANDINGWEBSITE": "موقع الهبوط أو الموقع الاستقبالي",
+  "PORTFOLIOWEBSITE": "بورتفوليو ويبسايت",
   "BLOG WEBSITE": "موقع الويب للمدونة",
+  "CLIENTPORTAL": "بوابة العميل",
+  "MadebyNext.js,TypescriptandChakraUi": "صُنِعَ بواسطة Next.js و Typescript و Chakra UI",
   "MadebyReact.jsandStyledComponents": "صُنع بواسطة ريأكت جي إس ومكونات مُنسّقة",
   "MadebyReact.jsandModuleCSS": "صُنع بواسطة ريأكت جي إس وموديول سي إس إس",
   "MadebyNext.jsandTailwindCSS": "صُنع بواسطة نيكست.جي إس وتايلويند سي إس إس",
