--- a/src/translations/bd.json
+++ b/src/translations/bd.json
@@ -54,7 +54,10 @@
   "E-COMMERCEWEBSITE": "ই-কমার্স ওয়েবসাইট",
   "ADMINDASHBOARD": "অ্যাডমিন ড্যাশবোর্ড",
   "LANDINGWEBSITE": "ল্যান্ডিং ওয়েবসাইট",
+  "PORTFOLIOWEBSITE": "পোর্টফোলিও ওয়েবসাইট",
+  "CLIENTPORTAL": "ক্লায়েন্ট পোর্টাল",
   "BLOG WEBSITE": "ব্লগ ওয়েবসাইট",
+  "MadebyNext.js,TypescriptandChakraUi": "নেক্সট জেএস, টাইপস্কৃপ্ট এবং চাকরা ইউআই দিয়ে তৈরি।",
   "MadebyReact.jsandStyledComponents": "রিয়েক্ট এবং স্টাইল্ড কম্পোনেন্টস্ দিয়ে তৈরি।",
   "MadebyReact.jsandModuleCSS": "রিয়েক্ট জেএস এবং মডিউল সিএসএস দিয়ে তৈরি।",
   "MadebyNext.jsandTailwindCSS": "নেক্সট জেএস এবং টেইলউইন্ড সিএসএস দিয়ে তৈরি।",
