--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -57,7 +57,10 @@
   "E-COMMERCEWEBSITE": "E-COMMERCE WEBSITE",
   "ADMINDASHBOARD": "ADMIN DASHBOARD",
   "LANDINGWEBSITE": "LANDING WEBSITE",
+  "PORTFOLIOWEBSITE": "PORTFOLIO WEBSITE",
+  "CLIENTPORTAL": "CLIENT PORTAL",
   "BLOG WEBSITE": "BLOG WEBSITE",
+  "MadebyNext.js,TypescriptandChakraUi": "Made by Next.js,Typescript and Chakra Ui",
   "MadebyReact.jsandStyledComponents": "Made by React.js and Styled Components",
   "MadebyReact.jsandModuleCSS": "Made by React.js and ModuleCSS",
   "MadebyNext.jsandTailwindCSS": "Made by Next.js and TaiwindCSS",
